Modification du titre et de la description du projet Titanic pour clarifier l'approche adoptée. Ajout d'une section sur les valeurs manquantes et leur traitement, ainsi que des observations préliminaires sur les données. Mise à jour des compteurs d'exécution et suppression de cellules de code obsolètes.

--- a/modelisation_predictive_titanic.ipynb
+++ b/modelisation_predictive_titanic.ipynb
@@ -5,9 +5,9 @@
    "id": "f1722800",
    "metadata": {},
    "source": [
-    "# Modélisation prédictive avec le jeu de données Titanic (Kaggle Beginners)\n",
+    "# Mon approche du problème du Titanic\n",
     "\n",
-    "Ce projet vise à initier les apprenants à la résolution d’un problème réel de classification supervisée à partir de données ouvertes. À partir du jeu de données Titanic (projet débutant de Kaggle), ils construisent un modèle prédictif pour estimer la probabilité de survie des passagers, en mobilisant les étapes clés d’un pipeline de machine learning."
+    "Dans ce projet, on s'attaque au célèbre défi du Titanic de Kaggle. L'objectif est de prédire qui a survécu au naufrage en analysant les données des passagers. On va se questionner sur la meilleure façon d'aborder ce problème : Quelles données sont les plus importantes ? Comment traiter les données manquantes ? Quel modèle choisir ?"
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "485a8514",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,54 +320,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bda535c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PassengerId      0\n",
-       "Survived         0\n",
-       "Pclass           0\n",
-       "Name             0\n",
-       "Sex              0\n",
-       "Age            177\n",
-       "SibSp            0\n",
-       "Parch            0\n",
-       "Ticket           0\n",
-       "Fare             0\n",
-       "Cabin          687\n",
-       "Embarked         2\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# affichage du nombre de valeurs manquantes par colonne\n",
-    "trainData.isna().sum()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "dd62125d",
+   "id": "b604782e",
    "metadata": {},
    "source": [
-    "On voit que :\n",
-    "\n",
-    "**Age** > 177 valeurs manquantes\n",
-    "\n",
-    "**Cabin** > 687 valeurs manquantes"
+    "**Informations sur nos données**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "939457bd",
    "metadata": {},
    "outputs": [
@@ -508,13 +470,205 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "trainData.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1d81f1f",
+   "metadata": {},
+   "source": [
+    "**Quelques points à observer**\n",
+    "\n",
+    "- Sur `891` passagers, seulement `38,38 %` ont survécu au naufrage.\n",
+    "\n",
+    "- L'âge médian était de `28` ans.\n",
+    "\n",
+    "- Prix du billet médian de `14,45` alors que le tarif max était de `512,33`\n",
+    "\n",
+    "On voit qu'il manque certaines valeurs, allons plus loin."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bda535c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age            177\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          687\n",
+       "Embarked         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# affichage du nombre de valeurs manquantes par colonne\n",
+    "trainData.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd62125d",
+   "metadata": {},
+   "source": [
+    "**Valeurs manquantes par colonne**\n",
+    "\n",
+    "`Age` : 177 valeurs manquantes\n",
+    "\n",
+    "`Cabin` : 687 valeurs manquantes\n",
+    "\n",
+    "`Embarked` : 2 valeurs manquantes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62303ae3",
+   "metadata": {},
+   "source": [
+    "**Peut-on remplacer les valeurs vides ?**\n",
+    "\n",
+    "Nous pourrions remplacer les valeurs `Age` manquantes par la moyenne du profil type. Imaginons quelques-uns de ces groupes :\n",
+    "\n",
+    "- `femmes ayant un ticket en première classe`\n",
+    "\n",
+    "- `hommes ayant un ticket en troisième classe`\n",
+    "\n",
+    "On peut imaginer que le remplacement par la moyenne d'âge de ces groupes serait plus pertinente que la moyenne globale.\n",
+    "\n",
+    "Vérifions-le."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e5d6d221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    mean   min   max  count\n",
+      "Sex    Pclass                              \n",
+      "female 1       34.611765  2.00  63.0     85\n",
+      "       2       28.722973  2.00  57.0     74\n",
+      "       3       21.750000  0.75  63.0    102\n",
+      "male   1       41.281386  0.92  80.0    101\n",
+      "       2       30.740707  0.67  70.0     99\n",
+      "       3       26.507589  0.42  74.0    253\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vérifier que c'est plus pertinent que la moyenne globale\n",
+    "age_by_group = trainData.groupby(['Sex', 'Pclass'])['Age'].agg(['mean', 'min', 'max', 'count'])\n",
+    "\n",
+    "print(age_by_group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8e60ad5",
+   "metadata": {},
+   "source": [
+    "On observe que les groupes ont bien des moyennes d'`Age` différentes ce qui laisse à penser que c'est une décision qui amenera plus de précision.\n",
+    "\n",
+    "Remplaçons les données manquantes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b52f2b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age              0\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          687\n",
+       "Embarked         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# déterminer ce que l'on fait des lignes incomplètes (age, cabin, embarked)\n",
+    "\n",
+    "# AGE : remplir les ages manquants avec la moyenne du profil type en se basant sur le sexe et la classe\n",
+    "def fill_age(data):\n",
+    "    data_filled = data.copy()\n",
+    "\n",
+    "    # fonction a utiliser dans transform, on aurait pu utiliser une lambda\n",
+    "    def fillna_with_mean(x):\n",
+    "        return x.fillna(x.mean())\n",
+    "\n",
+    "    # remplacer valeurs vides par moyenne du groupe (basé sur sexe + classe)\n",
+    "    data_filled['Age'] = data_filled.groupby(['Sex', 'Pclass'])['Age'].transform(fillna_with_mean)\n",
+    "\n",
+    "    # si il reste des valeurs vides > utiliser la moyenne globale en dernier recours\n",
+    "    data_filled['Age'] = data_filled['Age'].fillna(data_filled['Age'].mean())\n",
+    "\n",
+    "    return data_filled\n",
+    "\n",
+    "trainData_age_filled = fill_age(trainData)\n",
+    "testData_age_filled = fill_age(testData)\n",
+    "\n",
+    "trainData_age_filled.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73173895",
+   "metadata": {},
+   "source": [
+    "Nous n'avons plus de valeurs `Age` vides "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0550ecde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y a-t-il des colonnes superflues"
    ]
   },
   {
