Ajout de nouvelles fonctionnalités pour le traitement des données dans le notebook Titanic, incluant la création de colonnes pour la taille de la famille, l'indication de solitude, la présence de cabine, et l'extraction des titres des noms. Mise à jour des compteurs d'exécution et changement du nom du fichier de sortie pour les prédictions.

--- a/modelisation_predictive_titanic.ipynb
+++ b/modelisation_predictive_titanic.ipynb
@@ -12,19 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 171,
    "id": "a8a79819",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 172,
    "id": "ac93cba0",
    "metadata": {},
    "outputs": [
@@ -166,7 +167,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 173,
    "id": "485a8514",
    "metadata": {},
    "outputs": [
@@ -308,7 +309,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 174,
    "id": "939457bd",
    "metadata": {},
    "outputs": [
@@ -470,7 +471,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 175,
    "id": "bda535c8",
    "metadata": {},
    "outputs": [
@@ -519,7 +520,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 176,
    "id": "e5d6d221",
    "metadata": {},
    "outputs": [
@@ -663,7 +664,7 @@
        "       3       26.507589  0.42  74.0    253"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "b52f2b96",
    "metadata": {},
    "outputs": [
@@ -709,13 +710,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# AGE : remplir les ages manquants avec la moyenne du profil type en se basant sur le sexe et la classe\n",
+    "# remplir les ages manquants avec la moyenne du profil type en se basant sur le sexe et la classe\n",
     "\n",
     "# fonction afin de pouvoir reproduire cette étape plus facilement dans la suite de ce projet\n",
     "def fill_age(data):\n",
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 178,
    "id": "a565af09",
    "metadata": {},
    "outputs": [
@@ -775,7 +776,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 179,
    "id": "0550ecde",
    "metadata": {},
    "outputs": [
@@ -819,7 +820,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 180,
    "id": "2f5b03ab",
    "metadata": {},
    "outputs": [
@@ -868,7 +869,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 181,
    "id": "e237a890",
    "metadata": {},
    "outputs": [
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 182,
    "id": "842ffc58",
    "metadata": {},
    "outputs": [
@@ -940,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 183,
    "id": "3b5fa7a4",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 184,
    "id": "a92f49b9",
    "metadata": {},
    "outputs": [
@@ -2710,7 +2711,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 185,
+   "id": "8b217b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title\n",
+      "Mr          517\n",
+      "Miss        182\n",
+      "Mrs         125\n",
+      "Master       40\n",
+      "Dr            7\n",
+      "Rev           6\n",
+      "Col           2\n",
+      "Mlle          2\n",
+      "Major         2\n",
+      "Ms            1\n",
+      "Mme           1\n",
+      "Don           1\n",
+      "Lady          1\n",
+      "Sir           1\n",
+      "Capt          1\n",
+      "Countess      1\n",
+      "Jonkheer      1\n",
+      "Name: count, dtype: int64\n",
+      "Title\n",
+      "Mr        240\n",
+      "Miss       78\n",
+      "Mrs        72\n",
+      "Master     21\n",
+      "Col         2\n",
+      "Rev         2\n",
+      "Ms          1\n",
+      "Dr          1\n",
+      "Dona        1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ajout de features\n",
+    "fullData = [trainData_filled, testData_filled]\n",
+    "\n",
+    "# family size\n",
+    "for i in fullData:\n",
+    "    i['FamilySize'] = i['SibSp'] + i['Parch'] + 1\n",
+    "\n",
+    "# is alone\n",
+    "for i in fullData:\n",
+    "    i['IsAlone'] = 0\n",
+    "\n",
+    "    # si la condition est true on sélectionne 'IsAlone'\n",
+    "    i.loc[i['FamilySize'] == 1, 'IsAlone'] = 1\n",
+    "\n",
+    "# has cabin\n",
+    "for i in fullData:\n",
+    "    i['HasCabin'] = 0\n",
+    "\n",
+    "    i.loc[i['Cabin'] != 'Unknown', 'HasCabin'] = 1\n",
+    "\n",
+    "# title from name\n",
+    "def get_title(name):\n",
+    "    # on cherche un espace, on capture la chaine de plusieurs lettres si elle est suivie d'un point (échappé avec le \\)\n",
+    "    search_result = re.search(r' ([A-Za-z]+)\\.', name) # raw string pour que python ne traite pas l'échappement avant regex\n",
+    "\n",
+    "    if search_result:\n",
+    "        # group(0): return ' Mrs.' (TOUT le pattern)\n",
+    "        # group(1): return 'Mrs' (le groupe de capture entre parenthèses)\n",
+    "        # group(2): (le 2eme groupe de capture entre parenthèses s'il existe)\n",
+    "        return search_result.group(1)\n",
+    "    return ''\n",
+    "\n",
+    "for i in fullData:\n",
+    "    i['Title'] = i['Name'].apply(get_title)\n",
+    "\n",
+    "# trainData_filled.head(50)\n",
+    "print(trainData_filled['Title'].value_counts(dropna=False))\n",
+    "print(testData_filled['Title'].value_counts(dropna=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "2d06206d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title\n",
+      "Mr        517\n",
+      "Miss      182\n",
+      "Mrs       125\n",
+      "Master     40\n",
+      "Rare       27\n",
+      "Name: count, dtype: int64\n",
+      "Title\n",
+      "Mr        240\n",
+      "Miss       78\n",
+      "Mrs        72\n",
+      "Master     21\n",
+      "Rare        7\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# récupérer dynamiquement tous les titles rares pour les unifier dans une même catégorie\n",
+    "for i in fullData:\n",
+    "    title_count = i['Title'].value_counts()\n",
+    "\n",
+    "    i['Title'] = i['Title'].apply(\n",
+    "        # appliquer le vrai titre s'il en existe plus de 10 dans nos données autrement on applique 'Rare'\n",
+    "        lambda real_title: real_title if title_count[real_title] > 10 else 'Rare' \n",
+    "        )\n",
+    "\n",
+    "print(trainData_filled['Title'].value_counts(dropna=False))\n",
+    "print(testData_filled['Title'].value_counts(dropna=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "id": "eff453e5",
    "metadata": {},
    "outputs": [
@@ -2733,7 +2859,11 @@
     "    'Pclass', # classe du billet/équivalent classe sociale > 1-Upper 2-Mid 3-Lower\n",
     "    'Sex', # sexe du passager\n",
     "    'SibSp', # nombre de siblings/spouses à bord\n",
-    "    'Parch' # nombre de parents/children à bord\n",
+    "    'Parch', # nombre de parents/children à bord\n",
+    "    'FamilySize',\n",
+    "    'IsAlone',\n",
+    "    'HasCabin',\n",
+    "    'Title',\n",
     "]\n",
     "\n",
     "X = pd.get_dummies(trainData_filled[features])\n",
@@ -2756,7 +2886,7 @@
     "    'Survived': predictions # les prédictions 0 ou 1\n",
     "})\n",
     "\n",
-    "output.to_csv('submission2.csv', index=False)\n",
+    "output.to_csv('submission3.csv', index=False)\n",
     "\n",
     "print('success')"
    ]
