--- a/modelisation_predictive_titanic.ipynb
+++ b/modelisation_predictive_titanic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 205,
    "id": "a8a79819",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 206,
    "id": "ac93cba0",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 207,
    "id": "485a8514",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 208,
    "id": "939457bd",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 209,
    "id": "bda535c8",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 210,
    "id": "e5d6d221",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "       3       26.507589  0.42  74.0    253"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "id": "b52f2b96",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 212,
    "id": "a565af09",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 213,
    "id": "0550ecde",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 214,
    "id": "2f5b03ab",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 215,
    "id": "e237a890",
    "metadata": {},
    "outputs": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 216,
    "id": "842ffc58",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 217,
    "id": "3b5fa7a4",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 218,
    "id": "a92f49b9",
    "metadata": {},
    "outputs": [
@@ -2711,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 219,
    "id": "8b217b8a",
    "metadata": {},
    "outputs": [
@@ -2795,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 220,
    "id": "2d06206d",
    "metadata": {},
    "outputs": [
@@ -2836,7 +2836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 221,
    "id": "eff453e5",
    "metadata": {},
    "outputs": [
@@ -2871,7 +2871,7 @@
     "\n",
     "model = RandomForestClassifier(\n",
     "    n_estimators=100, # nombre d'arbres de la forêt > + = plus précis mais plus lent\n",
-    "    max_depth=5, # profondeur max par arbre > évite l'overfitting (quand le modèle s'adapte trop aux données d'entrainement)\n",
+    "    max_depth=8, # profondeur max par arbre > évite l'overfitting (quand le modèle s'adapte trop aux données d'entrainement)\n",
     "    random_state=1 # comme une seed > pour pas que cela ne soit random à chaque fois\n",
     ")\n",
     "\n",
@@ -2886,15 +2886,78 @@
     "    'Survived': predictions # les prédictions 0 ou 1\n",
     "})\n",
     "\n",
-    "output.to_csv('submission3.csv', index=False)\n",
+    "# output.to_csv('submission3.csv', index=False)\n",
     "\n",
-    "print('success')"
+    "\n",
+    "\n",
+    "print('success')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "f9388495",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Groupe d'entraînement : 712 passagers\n",
+      "Groupe de validation  : 179 passagers\n",
+      "Précision sur la validation : 75.41899%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# diviser les données 80% pour apprendre 20% pour tester l'apprentissage\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=1\n",
+    ")\n",
+    "\n",
+    "print(f\"Groupe d'entraînement : {len(X_train)} passagers\")\n",
+    "print(f\"Groupe de validation  : {len(X_validation)} passagers\")\n",
+    "\n",
+    "# voir si les proportions sont similaires\n",
+    "# taux_train = y_train.mean()\n",
+    "# taux_validation = y_validation.mean()\n",
+    "\n",
+    "# print(f\"entraînement: {taux_train:.1%}\")\n",
+    "# print(f\"Validation: {taux_validation:.1%}\")\n",
+    "\n",
+    "# normaliser les données\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_validation_scaled = scaler.transform(X_validation)\n",
+    "Xtest_scaled = scaler.transform(Xtest)\n",
+    "\n",
+    "sgd_model = SGDClassifier(\n",
+    "    loss='log_loss',\n",
+    "    max_iter=1000,\n",
+    "    random_state=1\n",
+    ")\n",
+    "\n",
+    "sgd_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "predictions_validation = sgd_model.predict(X_validation_scaled)\n",
+    "\n",
+    "precision = accuracy_score(y_validation, predictions_validation)\n",
+    "\n",
+    "print(f\"Précision sur la validation : {precision:.5%}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9388495",
+   "id": "8655bb7c",
    "metadata": {},
    "outputs": [],
    "source": []
