Suppression de fichiers obsolètes liés au projet Titanic, y compris les fichiers de données et les guides HTML. Mise à jour de l'analyse réflexive. Modification des chemins d'accès aux fichiers de données dans le notebook v2. Mise au propre de l'exploration de données.

--- a/v1.ipynb
+++ b/v1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "id": "ac93cba0",
    "metadata": {},
    "outputs": [
@@ -174,13 +174,13 @@
    ],
    "source": [
     "# on affiche les 5 premières lignes de train.csv\n",
-    "trainData = pd.read_csv('train.csv')\n",
+    "trainData = pd.read_csv('data/train.csv')\n",
     "trainData.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "id": "485a8514",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
    ],
    "source": [
     "# on affiche les 5 premières lignes de test.csv\n",
-    "testData = pd.read_csv('test.csv')\n",
+    "testData = pd.read_csv('data/test.csv')\n",
     "testData.head()"
    ]
   },
@@ -2836,7 +2836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "id": "eff453e5",
    "metadata": {},
    "outputs": [
@@ -2856,10 +2856,10 @@
     "\n",
     "# on définit quelles caractéristiques utiliser pour la prédiction\n",
     "features = [\n",
-    "    'Pclass', # classe du billet/équivalent classe sociale > 1-Upper 2-Mid 3-Lower\n",
-    "    'Sex', # sexe du passager\n",
-    "    'SibSp', # nombre de siblings/spouses à bord\n",
-    "    'Parch', # nombre de parents/children à bord\n",
+    "    'Pclass',\n",
+    "    'Sex',\n",
+    "    'SibSp',\n",
+    "    'Parch',\n",
     "    'FamilySize',\n",
     "    'IsAlone',\n",
     "    'HasCabin',\n",
@@ -2875,10 +2875,10 @@
     "    random_state=1 # comme une seed > pour pas que cela ne soit random à chaque fois\n",
     ")\n",
     "\n",
-    "# entrainement du modèle > comme si on étudiait 1000 cas médicaux avec des diagnostics connus et mémorisait les patterns (si symptomes A+B alors maladie X)\n",
+    "# entrainement du modèle \n",
     "model.fit(X, y)\n",
     "\n",
-    "# mise en application > on voit 500 nouveaux patients, applique les connaissances acquises et on sort un diagnostic pour chacun\n",
+    "# mise en application\n",
     "predictions = model.predict(Xtest)\n",
     "\n",
     "output = pd.DataFrame({\n",
